<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.act.M002Login">

    <ImageView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_122sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/img_splash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:padding="@dimen/_4sdp"
        android:text="@string/SignIn"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/bg_et_login"
        android:hint="@string/phone"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/bg_et_login"
        android:hint="@string/password"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_16sdp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:padding="@dimen/_2sdp">

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="@dimen/_4sdp"
            android:text="@string/forget_password"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edt_sign_in"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/bg_et_dang_nhap"
            android:padding="@dimen/_8sdp"
            android:text="@string/SignIn"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="@dimen/_4sdp"
            android:text="@string/not_yet_account"
            android:textColor="@color/xam"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="@dimen/_4sdp"
            android:text="@string/new_account"
            android:textColor="@color/xam"
            android:textSize="@dimen/_12sdp" />
    </TableRow>
</LinearLayout>