<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/_4sdp"
    android:paddingStart="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        >
        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/target_menu"
            android:padding="@dimen/_4sdp"/>
        <TextView
            android:id="@+id/tv_location_of_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/text_location"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </TableRow>
    <View
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:background="@color/xam"
        android:layout_height="0.5dp"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        >
        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/car_menu"
            android:padding="@dimen/_4sdp"/>
        <TextView
            android:id="@+id/tv_list_car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/text_list_car"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </TableRow>
    <View
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:background="@color/xam"
        android:layout_height="0.5dp"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/man"
            android:padding="@dimen/_4sdp"
            app:civ_border_color="@color/red"
            app:civ_border_width="8dp"/>
        <TextView
            android:id="@+id/tv_info_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/text_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </TableRow>
    <View
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:background="@color/xam"
        android:layout_height="0.5dp"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        >
        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/target_menu"
            android:padding="@dimen/_4sdp"/>
        <TextView
            android:id="@+id/tv_log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/text_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </TableRow>
    <View
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:background="@color/xam"
        android:layout_height="0.5dp"/>
</LinearLayout>